[gd_scene load_steps=30 format=3 uid="uid://decc2pao25m5x"]

[ext_resource type="Script" uid="uid://cu5b33giy4rqi" path="res://Scripts/ghost_enemy.gd" id="1_108wt"]
[ext_resource type="Texture2D" uid="uid://brc0axrvrkab0" path="res://assets/Enemies/GHOST_FREE_VERSION/FREE_VERSION/MiniGhost_Idle.png" id="1_e3r4w"]
[ext_resource type="Texture2D" uid="uid://j43ysgpvbwge" path="res://assets/Enemies/GHOST_FREE_VERSION/FREE_VERSION/MiniGhost_Spawn.png" id="2_108wt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3r4w"]
radius = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3btnm"]
atlas = ExtResource("1_e3r4w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_taxxh"]
atlas = ExtResource("1_e3r4w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thbej"]
atlas = ExtResource("1_e3r4w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uta0k"]
atlas = ExtResource("1_e3r4w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_st3at"]
atlas = ExtResource("1_e3r4w")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hbae"]
atlas = ExtResource("1_e3r4w")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoekh"]
atlas = ExtResource("1_e3r4w")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdkt2"]
atlas = ExtResource("1_e3r4w")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prwv0"]
atlas = ExtResource("1_e3r4w")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_108wt"]
atlas = ExtResource("2_108wt")
region = Rect2(0, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax0xk"]
atlas = ExtResource("2_108wt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe55a"]
atlas = ExtResource("2_108wt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvq3t"]
atlas = ExtResource("2_108wt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jugkf"]
atlas = ExtResource("2_108wt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlvam"]
atlas = ExtResource("2_108wt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t7of"]
atlas = ExtResource("2_108wt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bacfh"]
atlas = ExtResource("2_108wt")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu7qg"]
atlas = ExtResource("2_108wt")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4wdi"]
atlas = ExtResource("2_108wt")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w60pv"]
atlas = ExtResource("2_108wt")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo8bj"]
atlas = ExtResource("2_108wt")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awks0"]
atlas = ExtResource("2_108wt")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3atw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3btnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taxxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thbej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uta0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st3at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hbae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoekh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdkt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prwv0")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_108wt")
}],
"loop": true,
"name": &"None",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax0xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe55a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvq3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jugkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlvam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t7of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bacfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu7qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4wdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w60pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo8bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awks0")
}],
"loop": false,
"name": &"Spawn",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_108wt"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_108wt"]
radius = 185.6906

[node name="Ghost" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_108wt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_e3r4w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d3atw")
animation = &"Idle"
autoplay = "None"

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CapsuleShape2D_108wt")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_108wt")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
